# HyperLink

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: apt-repo.yml  ci.yml  npm-publish.yml  release.yml
cmake/: FindLibusb.cmake  HyperlinkConfig.cmake.in
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-07-10-cross-platform-peer-discovery.md
docs/superpowers/specs/: 2026-07-10-cross-platform-peer-discovery-design.md
examples/: bench.cpp  cli.cpp  file_transfer.cpp  probe.cpp
include/hyperlink/: auto_config.hpp  export.hpp  network_transport.hpp  peer_discovery.hpp  session.hpp
npm/: hyperlink.js
packaging/winget/: README.md
packaging/winget/Manifests/c/Chaoos404/Hyperlink/0.1.7/: Chaoos404.Hyperlink.installer.yaml  Chaoos404.Hyperlink.locale.en-US.yaml  Chaoos404.Hyperlink.yaml
public/: app.js  index.html  styles.css
scripts/: check-syntax.js  defender-firewall-speed-test-toggle.ps1  deploy_server.sh  disable-current-usb4-offloads.ps1  fix-current-usb4-p2p.ps1  fix-usb4-receive-path.ps1  tune-usb4-mtu-rsc.ps1  tune-windows-delayed-ack.ps1
src/: auto_config.cpp  cli.js  discovery.js  doctor.js  gui.js  hash.js  interfaces.js  network_transport.cpp  peer_discovery.cpp  peer_discovery_internal.hpp  progress.js  protocol.js  receiver.js  sender.js  session.cpp  speedtest.js  udpspeed.js  usb_libusb_transport.cpp  usb_unavailable_transport.cpp
test/: socket-tuning.test.js  transfer.test.js  udp-speed.test.js
tests/: auto_config_tests.cpp  peer_discovery_tests.cpp  session_tests.cpp  test_main.cpp
